<resources>
    <string name="app_name">JetPackNavigationComponent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_you_want_to_send_this_money">Do you want to send this money?</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="info">Info</string>
    <string name="about_app">About App</string>
    <string name="transactions">Transactions</string>
    <string name="login_text">Login an active all features</string>
    <string name="account">Account</string>
    <string name="welcome_to_your_profile">Welcome %1$s to your Profile</string>
</resources>