<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_graph"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/setting_graph"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/notification_graph"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />

        <item android:title="@string/info">
            <menu>
                <item
                    android:id="@+id/aboutAppFragment"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about_app" />
                <item
                    android:id="@+id/viewTransactionsFragment"
                    android:icon="@drawable/ic_monay"
                    android:title="@string/transactions" />
            </menu>
        </item>

    </group>
</menu>